# Meeting-Minutes-Generator

./: .gitignore  main.py  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  job_store.py
app/routers/: meetings.py
app/services/: pipeline.py  process.py
app/static/: index.html
