[project]
name = "meeting-minutes-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "faster-whisper>=1.2.1",
    "ffmpeg>=1.4",
    "ffmpy>=1.0.0",
    "langchain>=1.3.12",
    "langchain-community>=0.4.2",
    "pydantic-settings>=2.14.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.1",
]
